syntax = "proto3";

package account.v1;

import "google/api/annotations.proto";
import "account/v1/account_message.proto";

option go_package = "./accountv1";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/accounts"
      body: "*"
    };
  }
}